# Orange_DataBase

./: LICENSE  README.md
ODB(old)/: ODB设计文档.md
ODB-Lite/client/: CMakeLists.txt
ODB-Lite/server/: CMakeLists.txt
ODB-Lite/server/ORP/include/: ORPSET.h  SDS.h  affair.h  command.h
ODB-Lite/server/ORP/src/: SDS.c  affair.c  command.c  transmit.c
ODB-Lite/server/data/include/: DLinkList.h  DataSet.h  Hash.h  SDS.h  autoSaver.h  dataFommat.h  diskio.h  set.h  snapshot.h  valueHash.h  valueList.h  valueSet.h
ODB-Lite/server/data/src/: DLinkList.c  Hash.c  Realizer.c  SDS.c  autoSaver.c  dataFommat.c  diskio.c  list.c  set.c  snapshot.c  valueHash.c  valueList.c  valueSet.c
ODB-Lite/server/include/: affair.h  command.h
ODB-Lite/server/resources/: Database.odb  config.h
ODB-Lite/server/src/: affair.c  command.c  server.c
ODB/client/: CMakeLists.txt
ODB/client/ORP/: CMakeLists.txt
ODB/client/ORP/include/: Hash.h  ORPSET.h  byteStream.h
ODB/client/ORP/src/: Hash.c  ORPSET.c  byteStream.c  command.c  request.c
ODB/client/include/: affair.h
ODB/client/src/: client.c
ODB/server/: CMakeLists.txt  ODB-Server.desktop
ODB/server/ORP/docs/: API.md
ODB/server/ORP/include/: transmit.h
ODB/server/ORP/src/: transmit.c
ODB/server/data/docs/: API.md
ODB/server/data/include/: Hash.h  Realizer.h  SDS.h  autoSaver.h
ODB/server/data/src/: autoSaver.c  valueHash.c  valueSet.c
ODB/server/docs/: 说明文档.md
ODB/server/include/: command_parser.h
ODB/server/resources/: Database.odb
ODB/server/src/: affair.c  command.c  command_parser.c  server.c
client/: CMakeLists.txt
client/ORP-Client/: ORPSET.h
client/ORP/include/: ORPSET.h  SDS-ORP.h  SDS.h  byteStream.h  command.h  request.h  response.h
client/ORP/src/: ORPSET.c  SDS-ORP.c  byteStream.c  command.c  request.c
client/resouces/: config.h
client/src/: client.c
docs/: ODB设计文档.md  学习日志.md  开发日志.md
server/: CMakeLists.txt  config.h
server/ORP/: CMakeLists.txt
server/ORP/include/: ORPSET.h  SDS.h  command.h  command_parser.h  request_dealer.h  response_dealer.h
server/ORP/src/: CLI.c  SDS-ORP.c  SDS.c  command.c  request_dealer.c  response.c  response_dealer.c
server/data/: CMakeLists.txt
server/data/include/: Hash.h  SDS.h
server/data/src/: SDS.c  diskio.c
server/resources/: config.h
server/src/: server.c
(+15 files in other folders)
